[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seestarpy"
version = "0.5.1"
authors = [ { name = "Kieran Leschinski", email = "kdleschinski@gmail.com" },]
description = "Python interface for the SeeStar telescope control system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "websockets",          # event listener / html dashboard
    "pysmb>=1.2.9",        # SMB file operations (data module)
    "tzlocal",             # local timezone (pi_set_time)
    "requests",            # CrowdSky web API
    "cryptography>=41.0",  # RSA signing for firmware 7.18+ authentication
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy",
    "pillow",
]
image = [
    "opencv-python-headless>=4.8",
    "numpy",
    "pillow",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_autodoc_typehints",
]

[project.urls]
"Homepage" = "https://github.com/astronomyk/seestarpy"
"Documentation" = "https://seestarpy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/astronomyk/seestarpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seestarpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live Seestar",
    "destructive: modifies telescope or data state",
    "sequence: multi-step observational sequence",
    "slow: takes more than 30 seconds",
]
addopts = "-v --tb=short"

